Refactored for Java 11.