@@ -1,13 +1,11 @@
 package Question;
 
-import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 public class Response implements Serializable {
-    @Serial
     private final static long serialVersionUID = 7L;
 
     private final String RESPONSE_DEFAULT = "-";
@@ -28,7 +26,7 @@ public class Response implements Serializable {
         if(responseList.isEmpty()){
             return RESPONSE_DEFAULT;
         }
-        return this.responseList.getFirst();
+        return this.responseList.get(0);
     }
 
     public void clearResponseList(){
